--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 * {
-  font-family: "Roboto", sans-serif;
+  font-family: 'Dangrek', cursive;
+  font-family: 'Raleway', sans-serif;
+  font-size: x-large;
   margin: 0;
   padding: 0;
 }
@@ -10,8 +12,8 @@
     padding-right: 8%;
   width: 100%;
   height: 100vh;
-  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-    url(/background.png);
+  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url(fondo.jpg);
   background-position: center;
   background-size: cover;
 }
@@ -31,7 +33,10 @@
 }
 nav{
     flex:1 ;
-    text-align: right;
+    text-align: center;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-style: oblique;
+       
 }
 nav ul li{
     list-style: none;
@@ -41,7 +46,8 @@ nav ul li{
 nav ul li a{
     text-decoration: none;
     color: #fff;
-    font-size: 13px;
+    font-size: 20px;
+    align-items: center;
 }
 .row{
     display: FLEX;
@@ -57,7 +63,7 @@ h1{
 }
 p{
     color:#fff;
-    font-size: 11px;
+    font-size: 18px;
     line-height: 15px;
 }
 button{
@@ -72,8 +78,8 @@ button{
     margin-top: 30px;
 }
 .card{
-    width: 200px;
-    height: 230px;
+    width: 250px;
+    height: 300px;
     display: inline-block;
     border-radius: 10px;
     padding: 15px 25px;
@@ -82,18 +88,18 @@ button{
     margin: 10px 15px;
     background-size: cover;
     transition: transform 1s;
+    }
+.serie1{
+    background-image: url(lasPolacas.jpg)
 }
-.card1{
-    background-image: url(/pic-1.png);
+.serie2{
+    background-image: url(construyendoFierro.jpeg);
 }
-.card2{
-    background-image: url(/pic-2.png);
+.serie3{
+    background-image: url(billete1001.jpeg);
 }
-.card3{
-    background-image: url(/pic-3.png);
-}
-.card4{
-    background-image: url(/pic-4.png);
+.serie4{
+    background-image: url(Voyeur.jpeg);
 }
 .card:hover{
     transform: translate(10px);
@@ -105,5 +111,5 @@ h5{
 }
 .card p{
     text-shadow: 0 0 5px #000;
-    font-size:9px ;
+    font-size:12px ;
 }
